[tool.poetry]
name = "radiobar"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
briefcase = "^0.3.19"
rumps = "^0.4.0"
python-vlc = "^3.0.20123"
requests = "^2.32.3"

[tool.briefcase]
project_name = "radiobar"
bundle = "com.wass3r.radiobar"
version = "0.1.0"

[tool.briefcase.app.radiobar]
formal_name = "RadioBar"
description = "internet radio controlled via menubar"
icon = "radio-icon.png"
sources = ['src/radiobar']
requires = ["rumps", "python-vlc", "requests"]
license.file = "LICENSE"
url = "https://github.com/wass3r/RadioBar/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
